Fusion-Qa-Final/src/objects/TopProducts__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialID__c</fullName>
        <externalId>true</externalId>
        <label>MaterialID</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductURL__c</fullName>
        <label>Product URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UPK__c</fullName>
        <label>UPK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>NonCustom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Top Products</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductName__c</columns>
        <columns>ProductURL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>